--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat",
   "version": "0.1.0",
-  "homepage":"https://Zaxar-Lenin.github.io/AnanimusChatFront",
+  "homepage": "https://Zaxar-Lenin.github.io/AnanimusChatFront",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -22,6 +22,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
